--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>I will serve as an Area Chair for CVPR 2025.</li>
+								<li>I will serve as an Area Chair for CVPR 2025 and ICCV 2025.</li>
+								<li>One paper was accepted to SIGGRAPH, 2025.</li>
 								<li>Generative Image Dynamics was accepted to CVPR, 2024 and selected as <b>Best Paper Award</b>.</li>
 								<li>OmniMotion was accepted to ICCV, 2023 and selected as <b>Best Student Paper Award </b>.</li>
 								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as  <b>Best Paper Honorable Mention </b></li>
