--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<header>
 					<span class="image avatar"><img src="images/zhengqi_3.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Zhengqi Li</a></h1>
-					<p>Research Scientist at Google DeepMind<br />
+					<!-- <p>Research Scientist at Google DeepMind<br /> -->
 					<!-- Interested in 3D/4D vision</p> -->
 				</header>
 				<nav id="nav">
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I am a senior research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, the CVPR 2019 and CVPR 2023 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
+									I was a research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, the CVPR 2019 and CVPR 2023 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -65,8 +65,9 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
+								<li>Three paper was accepted to CVPR, 2025. Two were selected as Oral.</li>
 								<li>I will serve as an Area Chair for CVPR 2025 and ICCV 2025.</li>
-								<li>One paper was accepted to SIGGRAPH, 2025.</li>
+								<li>One paper was accepted to SIGGRAPH, 2024.</li>
 								<li>Generative Image Dynamics was accepted to CVPR, 2024 and selected as <b>Best Paper Award</b>.</li>
 								<li>OmniMotion was accepted to ICCV, 2023 and selected as <b>Best Student Paper Award </b>.</li>
 								<li>Three paper was accepted to CVPR, 2023. DynIBaR was selected as  <b>Best Paper Honorable Mention </b></li>
@@ -92,6 +93,95 @@
 									<h3>Publications/Technical Reports</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/megasam.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>MegaSaM: Accurate, Fast and Robust Structure and Motion from Casual Dynamic Videos</h4>
+												<a> Zhengqi Li, Richard Tucker, Forrester Cole, Qianqian Wang, Linyi Jin, Vickie Ye, Angjoo Kanazawa, Aleksander Holynski, Noah Snavely</a> <br>
+												<a>In CVPR, 2025 (Oral) </a>
+												<br>
+												[<a href="https://mega-sam.github.io/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/stereo4d_compressed.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Stereo4D: Learning How Things Move in 3D from Internet Stereo Videos</h4>
+												<a> Linyi Jin, Richard Tucker, Zhengqi Li, David Fouhey, Noah Snavely, Aleksander Holynski</a> <br>
+												<a>In CVPR, 2025 (Oral) </a>
+												<br>
+												[<a href="https://stereo4d.github.io/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image"><img src="videos/video_models_help_pose.gif" alt="" /></a>
+											<div class="inner">
+												<h4>Can Generative Video Models Help Pose Estimation?</h4>
+												<a> Ruojin Cai, Jason Y. Zhang, Philipp Henzler, Zhengqi Li, Noah Snavely, Ricardo Martin-Brualla </a> <br>
+												<a>In CVPR, 2025 (Highlight) </a>
+												<br>
+												[<a href="https://inter-pose.github.io/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/new_york_city.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Streetscapes: Large-scale Consistent Street View Generation Using Autoregressive Video Diffusion</h4>
+												<a> Boyang Deng, Richard Tucker, Zhengqi Li, Leo Guibas, Noah Snavely, Gordon Wetzstein</a> <br>
+												<a>In SIGGRAPH 2024 </a>
+												<br>
+												[<a href="https://boyangdeng.com/streetscapes/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/new_york_city.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Streetscapes: Large-scale Consistent Street View Generation Using Autoregressive Video Diffusion</h4>
+												<a> Boyang Deng, Richard Tucker, Zhengqi Li, Leo Guibas, Noah Snavely, Gordon Wetzstein</a> <br>
+												<a>In SIGGRAPH 2024 </a>
+												<br>
+												[<a href="https://boyangdeng.com/streetscapes/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/new_york_city.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Streetscapes: Large-scale Consistent Street View Generation Using Autoregressive Video Diffusion</h4>
+												<a> Boyang Deng, Richard Tucker, Zhengqi Li, Leo Guibas, Noah Snavely, Gordon Wetzstein</a> <br>
+												<a>In SIGGRAPH 2024 </a>
+												<br>
+												[<a href="https://boyangdeng.com/streetscapes/">www</a>]
+											</div>
+										</article>
+
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
