--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<li><a href="https://www.linkedin.com/in/zhengqi-li-2b1892b2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://scholar.google.com/citations?user=QLW0lzcAAAAJ&hl=en" class="icon fa-google"><span class="label">Google Scholar</span></a></li>
 						<li><a href="https://github.com/zhengqili" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:zhengqili@google.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:zl548@cornell.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -151,21 +151,6 @@
 											</div>
 										</article>
 
-
-										<article>
-											<a href="#" class="image">
-											<video  width=90% height=90% muted autoplay loop>
-											<source src="videos/new_york_city.mp4" type="video/mp4">
-									        Your browser does not support the video tag.
-          									</video></a>
-											<div class="inner">
-												<h4>Streetscapes: Large-scale Consistent Street View Generation Using Autoregressive Video Diffusion</h4>
-												<a> Boyang Deng, Richard Tucker, Zhengqi Li, Leo Guibas, Noah Snavely, Gordon Wetzstein</a> <br>
-												<a>In SIGGRAPH 2024 </a>
-												<br>
-												[<a href="https://boyangdeng.com/streetscapes/">www</a>]
-											</div>
-										</article>
 
 										<article>
 											<a href="#" class="image">
