--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I was a research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, the CVPR 2019 and CVPR 2023 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
+									I was a research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, the CVPR 2019 and CVPR 2023 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, the CVPR 2024 Best Paper Award, CVPR 2025 Best Paper Award Candidate. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -65,7 +65,7 @@
 							<section id="two">
 								<div class="container">
 								<h3>News</h3>
-								<li>Three paper was accepted to CVPR, 2025. Two were selected as Oral.</li>
+								<li>Three paper was accepted to CVPR, 2025. MegaSaM was selected as <b>Best Paper Award Candidate</b></li>
 								<li>I will serve as an Area Chair for CVPR 2025 and ICCV 2025.</li>
 								<li>One paper was accepted to SIGGRAPH, 2024.</li>
 								<li>Generative Image Dynamics was accepted to CVPR, 2024 and selected as <b>Best Paper Award</b>.</li>
@@ -102,7 +102,7 @@
 											<div class="inner">
 												<h4>MegaSaM: Accurate, Fast and Robust Structure and Motion from Casual Dynamic Videos</h4>
 												<a> Zhengqi Li, Richard Tucker, Forrester Cole, Qianqian Wang, Linyi Jin, Vickie Ye, Angjoo Kanazawa, Aleksander Holynski, Noah Snavely</a> <br>
-												<a>In CVPR, 2025 (Oral) </a>
+												<a>In CVPR, 2025 (<b>Best Paper Award Candidate</b>) </a>
 												<br>
 												[<a href="https://mega-sam.github.io/">www</a>]
 											</div>
