adding video example

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<li><a href="https://www.linkedin.com/in/zhengqi-li-2b1892b2/" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
 						<li><a href="https://scholar.google.com/citations?user=QLW0lzcAAAAJ&hl=en" class="icon fa-google"><span class="label">Google Scholar</span></a></li>
 						<li><a href="https://github.com/zhengqili" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:zl548@cornell.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:zl548@cornell.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I was a research scientist at Google DeepMind. I earned my Ph.D. in computer science from Cornell University, where I was advised by Professor Noah Snavely. I have received several awards for my research, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, the CVPR 2019, CVPR 2023, CVPR 2025 Best Paper Honorable Mention Award, the ICCV 2023 Best Student Paper Award, the CVPR 2024 Best Paper Award. </p>
+									I am a research scientist at Adobe Research. Previously, I was a research scientist at Google DeepMind. I earned my Ph.D. in Computer Science from Cornell University, where I was advised by Prof. Noah Snavely. My work has been recognized with several honors, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, Best Paper Honorable Mention Awards at CVPR 2019, CVPR 2023, and CVPR 2025, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -93,6 +93,22 @@
 									<h3>Publications/Technical Reports</h3>
 									<!-- <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p> -->
 									<div class="features">
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/demo.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Self Forcing: Bridging the Train-Test Gap in Autoregressive Video Diffusion</h4>
+												<a>Xun Huang, Zhengqi Li, Guande He, Mingyuan Zhou, Eli Shechtman</a> <br>
+												<br>
+												[<a href="https://self-forcing.github.io/">www</a>]
+											</div>
+										</article>
+
+
 										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
@@ -102,7 +118,7 @@
 											<div class="inner">
 												<h4>MegaSaM: Accurate, Fast and Robust Structure and Motion from Casual Dynamic Videos</h4>
 												<a> Zhengqi Li, Richard Tucker, Forrester Cole, Qianqian Wang, Linyi Jin, Vickie Ye, Angjoo Kanazawa, Aleksander Holynski, Noah Snavely</a> <br>
-												<a>In CVPR, 2025 (<b>Best Paper Award Candidate</b>) </a>
+												<a>In CVPR, 2025 (<b>Best Paper Honorable Mention</b>) </a>
 												<br>
 												[<a href="https://mega-sam.github.io/">www</a>]
 											</div>
@@ -118,7 +134,7 @@
 											<div class="inner">
 												<h4>Stereo4D: Learning How Things Move in 3D from Internet Stereo Videos</h4>
 												<a> Linyi Jin, Richard Tucker, Zhengqi Li, David Fouhey, Noah Snavely, Aleksander Holynski</a> <br>
-												<a>In CVPR, 2025 (Oral) </a>
+												<a>In CVPR, 2025 (<b>Oral</b>) </a>
 												<br>
 												[<a href="https://stereo4d.github.io/">www</a>]
 											</div>
