--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I am a research scientist at Adobe Research. Previously, I was a research scientist at Google DeepMind. I earned my Ph.D. in Computer Science from Cornell University, where I was advised by Prof. Noah Snavely. My work has been recognized with several honors, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, Best Paper Honorable Mention Awards at CVPR 2019, CVPR 2023, and CVPR 2025, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
+									I was a research scientist at Google DeepMind. I earned my Ph.D. in Computer Science from Cornell University, where I was advised by Prof. Noah Snavely. My work has been recognized with several honors, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, Best Paper Honorable Mention Awards at CVPR 2019, CVPR 2023, and CVPR 2025, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
