--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<header>
 					<span class="image avatar"><img src="images/zhengqi_3.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Zhengqi Li</a></h1>
-					<!-- <p>Research Scientist at Google DeepMind<br /> -->
+					<p>Research Scientist at Google DeepMind<br />
 					<!-- Interested in 3D/4D vision</p> -->
 				</header>
 				<nav id="nav">
@@ -56,7 +56,7 @@
 									<!-- <p>I am a research scientist at Google Research, where my current interests lie in computer vision. -->
 									<!-- <br><br> -->
 									<p>
-									I was a research scientist at Google DeepMind. I earned my Ph.D. in Computer Science from Cornell University, where I was advised by Prof. Noah Snavely. My work has been recognized with several honors, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, Best Paper Honorable Mention Awards at CVPR 2019, CVPR 2023, and CVPR 2025, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
+									I am a research scientist at Google DeepMind. Previously, I was a research scientist at Google Research and Adobe Research. I earned my Ph.D. in Computer Science from Cornell University, where I was advised by Prof. Noah Snavely. My work has been recognized with several honors, including the 2020 Google Ph.D. Fellowship, the 2020 Adobe Research Fellowship, the 2021 Baidu Global Top 100 Rising Stars in AI, Best Paper Honorable Mention Awards at CVPR 2019, CVPR 2023, and CVPR 2025, the ICCV 2023 Best Student Paper Award, and the CVPR 2024 Best Paper Award. </p>
 									<li><a href="Curriculum_Vitae.pdf" class="button">Resume/CV</a></li>
 									<!-- </p> -->
 								</div>
@@ -95,6 +95,60 @@
 									<div class="features">
 
 										<article>
+											<a href="#" class="image"><img src="images/self-e.png" alt="" /></a>
+											<div class="inner">
+												<h4>Self-Evaluation Unlocks Any-Step Text-to-Image Generation</h4>
+												<a>Xin Yu, Xiaojuan Qi, Zhengqi Li, Kai Zhang, Richard Zhang, Zhe Lin, Eli Shechtman, Tianyu Wang, Yotam Nitzan</a> <br>
+												<br>
+												[<a href="https://xinyu-andy.github.io/SelfE-project/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/AdobeStock_838752734.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>RELIC: Interactive Video World Model with Long-Horizon Memory</h4>
+												<a>Yicong Hong, Yiqun Mei, Chongjian Ge, Yiran Xu, Yang Zhou, Sai Bi, Yannick Hold-Geoffroy, Mike Roberts, Matthew Fisher, Eli Shechtman, Kalyan Sunkavalli, Feng Liu, Zhengqi Li, Hao Tan</a> <br>
+												<br>
+												[<a href="https://relic-worldmodel.github.io/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/woman-office.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>Generative Video Motion Editing with 3D Point Tracks</h4>
+												<a>Yao-Chih Lee, Zhoutong Zhang, Jiahui Huang, Jui-Hsien Wang, Joon-Young Lee, Jia-Bin Huang, Eli Shechtman, Zhengqi Li</a> <br>
+												<br>
+												[<a href="https://edit-by-track.github.io/">www</a>]
+											</div>
+										</article>
+
+										<article>
+											<a href="#" class="image">
+											<video  width=90% height=90% muted autoplay loop>
+											<source src="videos/ocean-book_compressed.mp4" type="video/mp4">
+									        Your browser does not support the video tag.
+          									</video></a>
+											<div class="inner">
+												<h4>MotionStream: Real-Time Video Generation with Interactive Motion Controls</h4>
+												<a>Joonghyuk Shin, Zhengqi Li, Richard Zhang, Jun-Yan Zhu, Jaesik Park, Eli Shechtman, Xun Huang</a> <br>
+												<br>
+												[<a href="https://joonghyuk.com/motionstream-web/">www</a>]
+											</div>
+										</article>
+
+
+										<article>
 											<a href="#" class="image">
 											<video  width=90% height=90% muted autoplay loop>
 											<source src="videos/demo.mp4" type="video/mp4">
@@ -103,6 +157,7 @@
 											<div class="inner">
 												<h4>Self Forcing: Bridging the Train-Test Gap in Autoregressive Video Diffusion</h4>
 												<a>Xun Huang, Zhengqi Li, Guande He, Mingyuan Zhou, Eli Shechtman</a> <br>
+												<a>In NeurIPS, 2025 (<b>Spotlight</b>) </a>
 												<br>
 												[<a href="https://self-forcing.github.io/">www</a>]
 											</div>
